# nme

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
apps/asan_check/: CMakeLists.txt  main.cpp
apps/benchmarks/: CMakeLists.txt
apps/benchmarks/allocator_bench/: alloc_bench.cpp
apps/benchmarks/cache_bench/: aos_vs_soa.cpp
apps/benchmarks/job_bench/: CMakeLists.txt  README.md  job_bench.cpp
apps/benchmarks/math_bench/: math_bench.cpp
apps/benchmarks/tools/: plot_bench.py
apps/cache_bench/: CMakeLists.txt  main.cpp
apps/editor/: CMakeLists.txt  main.cpp  project.cpp  project.h
apps/job_bench/: main.cpp
apps/sandbox/: CMakeLists.txt  main.cpp
apps/sandbox/config/: engine.ini
cmake/: add_benchmark.cmake  compiler_warnings.cmake  nme_deps.cmake  sanitizers.cmake
engine/: CMakeLists.txt
engine/include/nme/: version.h
engine/include/nme/audio/: audio.h
engine/include/nme/core/alloc/: stack_alloc.h
engine/include/nme/core/assert/: assert.h
engine/include/nme/core/config/: config.h  config_file.h  cvar.h
engine/include/nme/core/data/: data.h
engine/include/nme/core/debug/: log.h  profiler.h  scoped_timer.h
engine/include/nme/core/hid/: input_system.h
engine/include/nme/core/jobs/: job.h  job_system.h  ws_deque.h
engine/include/nme/core/math/: concepts.h  concepts.hpp  mat.h  matrix.hpp  quat.h  random.hpp  vec.h  vec.hpp  vec.inl
engine/include/nme/core/math/details/: concepts.hpp  func_common.hpp  func_compare.hpp  func_geometric.hpp  matrix.inl  matrix_algorithms.inl  matrix_base.hpp  matrix_common.hpp  matrix_constants.hpp  matrix_constants.inl  matrix_ctor.inl  matrix_ops.inl  matrix_traits.hpp  matrix_transform.hpp  vec.inl  vec_base.hpp  vec_common.inl  vec_compare.inl  vec_constants.hpp  vec_constants.inl  vec_ctor.inl  vec_geometric.inl  vec_ops.inl  vec_swizzle.inl  vec_traits.hpp  vec_trig.inl
engine/include/nme/core/math/ext/: concepts.h
engine/include/nme/core/memory/: align.h  allocator.h  heap_alloc.h  memory.h  pool_alloc.h  scratch_alloc.h  stack_alloc.h
engine/include/nme/core/modules/: module.h
engine/include/nme/core/networking/: networking.h
engine/include/nme/core/object/: object.h
engine/include/nme/core/parser/: parser.h
engine/include/nme/core/resource/: resource_manager.h
engine/include/nme/core/result/: error.h  result.h
engine/include/nme/core/rtti/: rtti.h
engine/include/nme/core/string/: string_id.h
engine/include/nme/core/subsystem/: kernel.h  subsystem.h  subsystem_error.h
engine/include/nme/core/unit_testing/: unit_testing.h
engine/include/nme/core/util/: scope_guard.h  unique_handle.h
engine/include/nme/front_end/: front_end.h
engine/include/nme/gameplay/: gameplay.h
engine/include/nme/hid/: input_system.h
engine/include/nme/multiplayer/: multiplayer.h
engine/include/nme/physics/: physics.h
engine/include/nme/platform/: cache.h  platform.h  types.h
engine/include/nme/platform/collections/: collections.h  dynamic_array.h  fixed_array.h  hash_map.h  linked_list.h  ring_buffer.h
engine/include/nme/platform/debug/: assert.h  debug_break.h
engine/include/nme/platform/error/: result.h
engine/include/nme/platform/filesys/: dir.h  file.h  file_system.h  filesys.h  path.h  read_file.h
engine/include/nme/platform/gfx/: clip_space.h  gfx.h  gfx_types.h
engine/include/nme/platform/graphics/: clip_space.h
engine/include/nme/platform/memory/: align.h  allocator.h
engine/include/nme/platform/thread/: atomics.h  condition_variable.h  mutex.h  spsc_ring.h  thread.h
engine/include/nme/platform/timer/: timer.h
engine/include/nme/renderer/: renderer.h
engine/include/nme/renderer/gdi/: gdi.h  gdi_types.h
engine/include/nme/resource/: package.h  resource_handle.h  resource_loader.h  resource_manager.h
engine/include/nme/vfx/: vfx.h
engine/src/: version.cpp
engine/src/core/: assert.cpp  string_id.cpp
engine/src/core/config/: config_file.cpp  cvar.cpp
engine/src/core/jobs/: job_system.cpp
engine/src/core/result/: error.cpp
engine/src/core/subsystem/: kernel.cpp
engine/src/platform/: assert.cpp
engine/src/platform/filesys/: path.cpp  read_file.cpp  win32_dir.cpp  win32_file.cpp
engine/src/platform/gfx/backend/vulkan/: vk_backend.cpp  vk_common.h  vk_swapchain.cpp
engine/src/platform/gfx/surface/: win32_surface.cpp
engine/src/platform/thread/win32/: condition_variable.cpp  mutex.cpp  thread.cpp
engine/src/platform/timer/: timer.cpp
engine/src/renderer/: renderer.cpp
engine/src/renderer/backend/vulkan/: vk_backend.cpp  vk_buffer.cpp  vk_common.h  vk_swapchain.cpp  vk_vma.cpp
engine/src/resource/: package.cpp  resource_manager.cpp
engine/vendors/: CMakeLists.txt  README.md
engine/vendors/vulkan/: LICENSE.txt
tests/: CMakeLists.txt  test_deque.cpp  test_matrix.cpp  test_mpmc_queue.cpp  test_spsc_ring.cpp  test_vec.cpp  test_version.cpp
